# wx

./: ARCHITECTURE.md  Cargo.toml  README.md  weixin_config.json  weixin_layout.json
.cursor/plans/: -----gpui-ac2529b5.plan.md
src/: assets.rs  main.rs  models.rs  theme.rs
src/app/: actions.rs  bootstrap.rs  config.rs  event_handlers.rs  events.rs  mod.rs  state.rs  view_builder.rs
src/components/: chat_area.rs  custom_title_bar.rs  group_avatar.rs  mod.rs  session_list.rs  settings_window.rs  toolbar.rs
src/components/chat/: input.rs  mod.rs  view.rs  window.rs
src/components/sessions/: mod.rs  view.rs
src/components/settings/: about.rs  account_and_storage.rs  general.rs  mod.rs  notifications.rs  plugins.rs  shortcuts.rs  window.rs
src/components/sidebar/: mod.rs  view.rs
src/data/: mod.rs  sample_data.rs
src/domain/: events.rs  mod.rs  repos.rs
src/infra/: memory_repos.rs  mod.rs  sample_data.rs
src/ui/: avatar.rs  constants.rs  fixed_resizable.rs  mod.rs  theme.rs
src/ui/base/: avatar.rs  icon_button.rs  menu_item.rs  mod.rs  search_input.rs  settings_button.rs  window_controls.rs
src/ui/composites/: chat_header_actions.rs  chat_toolbar.rs  message_bubble.rs  mod.rs  session_row.rs  setting_card.rs
src/ui/widgets/: badge_avatar.rs  chat_header_actions.rs  chat_toolbar.rs  group_avatar.rs  icon_buttons.rs  message_bubble.rs  message_list.rs  mod.rs  search_area.rs  session_row.rs  setting_card.rs  settings_button.rs  toggle.rs  virtual_list.rs  window_controls.rs
src/ui/widgets/toolbar/: hover_menu_item.rs  mod.rs
