[package]
name = "weixin"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = "0.2.2"
gpui-component = { version = "0.4.1" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path"] }


[profile.release]
#panic = "abort"
codegen-units = 1
lto = true
#incremental = false
opt-level = 3
