[package]
name = "weixin"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git="https://github.com/longbridge/gpui-component.git" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path"] }


# [profile.release]
# #panic = "abort"
# codegen-units = 1
# lto = true
# #incremental = false
# opt-level = 3
